# smart

./: .gitignore  CMakeLists.txt  README copy.md  README.md  gulpfile.js  package.json  pass.txt  simplified_architecture.fodg
.github/: problem_matcher.json
.github/workflows/: android_test.yml  main_cmake.yml  wasm.yml  windows_clang.yml
AndroidCanLang/: .gitignore  build.gradle  gradle.properties  settings.gradle
AndroidCanLang/app/: build.gradle
CoreTestApp/CoreTestApp/: MasterViewController.mm
lib/googletest/: CMakeLists.txt
llvm_ir_test/: build.sh  hello.cpp  main.c  main.cpp
lsp_vscode_server/: CMakeLists.txt  lsp_main.cpp  lsp_main.h  package.json  smartlang-lsp-1.0.0.vsix  test.cpp  test.txt
rust/src/: lib.rs  main.rs
scripts/: alt_cmake.js  make_bins.js
src/: CMakeLists.txt  LSPMain.hpp  code_nodes.hpp  common.hpp  errors.hpp  main.cpp  parse_util.hpp  thread_pool.cpp  thread_pool.hpp  tokenizer.hpp  utils.cpp
tests/: CMakeLists.txt  test.cpp  test_common.h  testlib_impl.cpp  testlib_impl.hpp
tests/google_tests/: coding_operation_tests.cpp  cplusplus_test.cpp  parser_test.cpp  script_runtime_test.cpp  speed_test.cpp  syntax_error_tests.cpp  tokenizers_test.cpp
tests/long_runing/: CMakeLists.txt
tests/long_running/: CMakeLists.txt  long_running.cpp  test.cpp
visual_studio_console_sln/: .gitignore  ConsoleApplication1.sln  NewLang.sln  Output-VisualC++Refactoring.txt  testClass.smt
wasm_project/: gulpfile.js  makefile  package.json  subwasm.cpp  test.html  undefined.syms  wasm.cpp
wasm_project_test/: package.json  puppeteer.js
(+73 files in other folders)
